--- a/css/products.css
+++ b/css/products.css
@@ -185,3 +185,27 @@ a{
     background-color: #1e5bb8;
 }
 
+#but {
+    margin-top: 20px;
+}
+
+#but button {
+    padding: 10px 20px;
+    margin-right: 10px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+#but #gotoCart{
+    background-color: #2874f0;
+    color: white;
+}
+
+#but #gotoCart:hover {
+    background-color: #1e5bb8;
+}
+
+
+
